Changed settings position and added persistency

--- a/data/lang/ui_strings.json
+++ b/data/lang/ui_strings.json
@@ -25,6 +25,12 @@
     "status_copied": "Copied to clipboard.",
     "status_saved": "Saved to: {file_path}",
     "status_cleared": "Cleared. Paste an image (Ctrl+V) or type the letters.",
+    "status_loading_dictionary": "Loading dictionary for {lang}...",
+    "error_loading_dictionary": "Error loading dictionary for {lang}:\\n{e}",
+    "status_dictionary_loaded": "Dictionary loaded! ({count} words)",
+    "results_title": "Results",
+    "english_display": "English",
+    "portuguese_display": "Portuguese",
     "error_title": "Error",
     "warning_title": "Warning",
     "info_title": "Info",
@@ -98,6 +104,12 @@
     "status_copied": "Copiado para a área de transferência.",
     "status_saved": "Salvo em: {file_path}",
     "status_cleared": "Limpo. Cole uma imagem (Ctrl+V) ou digite as letras.",
+    "status_loading_dictionary": "Carregando dicionário para {lang}...",
+    "error_loading_dictionary": "Erro ao carregar dicionário para {lang}:\\n{e}",
+    "status_dictionary_loaded": "Dicionário carregado! ({count} palavras)",
+    "results_title": "Resultados",
+    "english_display": "Inglês",
+    "portuguese_display": "Português",
     "error_title": "Erro",
     "warning_title": "Aviso",
     "info_title": "Info",
